# mzdata2mat

./: Changelog.md  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  matStructure.md  mzData.md  mzDataManager.md  mzdata2mat-verify.md
src/mzdata2mat/: mzdata2mat.py
tests/: test_mzDataManager.py
