[project]
name = "mzdata2mat"
version = "0.1.0"
authors = [
  { name="CORDELLA Maxime", email="maxime.cordella911@gmail.com" },
]
description = "Package used to convert mzData.xml files into matlab files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
  "pydantic>=2.6.4",
  "mat4py>=0.6.0",
  "javascript>=1!1.1.3"
]
keywords = ["mzData", "matlab", "convert", ".mat", ".mzData.xml", ".xml"]
license = {text = "MIT License"}

[project.scripts]
mzdata2mat-verify = "mzdata2mat:verify"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"